--- a/package.json
+++ b/package.json
@@ -12,23 +12,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gatsby": "1.0.0-alpha21",
-    "gatsby-link": "1.0.0-alpha20",
-    "gatsby-plugin-react-helmet": "1.0.0-alpha.22",
-    "gatsby-plugin-sharp": "1.0.0-alpha.22",
-    "gatsby-remark-copy-linked-files": "1.0.0-alpha.22",
-    "gatsby-remark-prismjs": "1.0.0-alpha.22",
-    "gatsby-remark-responsive-iframe": "1.0.0-alpha.22",
-    "gatsby-remark-responsive-image": "1.0.0-alpha.22",
-    "gatsby-remark-smartypants": "1.0.0-alpha.22",
-    "gatsby-source-filesystem": "1.0.0-alpha.22",
-    "gatsby-transformer-remark": "1.0.0-alpha.22",
+    "gatsby": "1.0.0-beta.2",
+    "gatsby-link": "1.0.0-beta.2",
+    "gatsby-plugin-react-helmet": "1.0.0-beta.1",
+    "gatsby-plugin-sharp": "1.0.0-beta.2",
+    "gatsby-plugin-styled-components": "1.0.0-beta.1",
+    "gatsby-remark-copy-linked-files": "1.0.0-beta.1",
+    "gatsby-remark-prismjs": "1.0.0-beta.2",
+    "gatsby-remark-responsive-iframe": "1.0.0-beta.1",
+    "gatsby-remark-responsive-image": "1.0.0-beta.2",
+    "gatsby-remark-smartypants": "1.0.0-beta.1",
+    "gatsby-source-filesystem": "1.0.0-beta.1",
+    "gatsby-transformer-remark": "1.0.0-beta.1",
     "styled-components": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
-    "eslint-plugin-react": "^7.0.1",
-    "gatsby-plugin-styled-components": "0.0.1",
-    "gatsby-source-filesystem": "^1.0.0-alpha11-alpha.509175e4"
+    "eslint-plugin-react": "^7.0.1"
   }
 }
