--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gatsby": "1.0.0-beta.6",
-    "gatsby-link": "1.0.0-beta.6",
-    "gatsby-plugin-react-helmet": "1.0.0-beta.6",
-    "gatsby-plugin-sharp": "1.0.0-beta.6",
-    "gatsby-plugin-styled-components": "1.0.0-beta.6",
-    "gatsby-remark-copy-linked-files": "1.0.0-beta.6",
-    "gatsby-remark-prismjs": "1.0.0-beta.6",
-    "gatsby-remark-responsive-iframe": "1.0.0-beta.6",
-    "gatsby-remark-images": "1.0.0-beta.6",
-    "gatsby-remark-smartypants": "1.0.0-beta.6",
-    "gatsby-source-filesystem": "1.0.0-beta.6",
-    "gatsby-transformer-remark": "1.0.0-beta.6",
+    "gatsby": "1.7.2",
+    "gatsby-link": "1.6.5",
+    "gatsby-plugin-react-helmet": "1.0.1",
+    "gatsby-plugin-sharp": "1.6.0",
+    "gatsby-plugin-styled-components": "1.0.1",
+    "gatsby-remark-copy-linked-files": "1.5.0",
+    "gatsby-remark-prismjs": "1.2.0",
+    "gatsby-remark-responsive-iframe": "1.4.1",
+    "gatsby-remark-images": "1.5.0",
+    "gatsby-remark-smartypants": "1.4.1",
+    "gatsby-source-filesystem": "1.4.1",
+    "gatsby-transformer-remark": "1.7.0",
     "styled-components": "^2.0.1"
   },
   "devDependencies": {
