--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gatsby": "1.9.8",
-    "gatsby-link": "1.6.13",
-    "gatsby-plugin-react-helmet": "1.0.4",
-    "gatsby-plugin-sharp": "1.6.3",
-    "gatsby-plugin-styled-components": "1.0.4",
-    "gatsby-remark-copy-linked-files": "1.5.3",
-    "gatsby-remark-prismjs": "1.2.2",
-    "gatsby-remark-responsive-iframe": "1.4.4",
-    "gatsby-remark-images": "1.5.5",
-    "gatsby-remark-smartypants": "1.4.4",
-    "gatsby-source-filesystem": "1.4.6",
-    "gatsby-transformer-remark": "1.7.3",
+    "gatsby": "^1.9.26",
+    "gatsby-link": "^1.6.16",
+    "gatsby-plugin-react-helmet": "^1.0.6",
+    "gatsby-plugin-sharp": "^1.6.7",
+    "gatsby-plugin-styled-components": "^1.0.5",
+    "gatsby-remark-copy-linked-files": "^1.5.7",
+    "gatsby-remark-images": "^1.5.11",
+    "gatsby-remark-prismjs": "^1.2.8",
+    "gatsby-remark-responsive-iframe": "^1.4.7",
+    "gatsby-remark-smartypants": "^1.4.7",
+    "gatsby-source-filesystem": "^1.4.12",
+    "gatsby-transformer-remark": "^1.7.7",
     "styled-components": "^2.1.2"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
+    "eslint": "^4.6.1",
     "eslint-plugin-react": "^7.0.1"
   }
 }
