--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "gatsby": "2.0.0-beta.13",
+    "gatsby-link": "2.0.0-beta.3",
     "gatsby-plugin-react-helmet": "3.0.0-beta.3",
     "gatsby-plugin-sharp": "2.0.0-beta.2",
     "gatsby-plugin-styled-components": "3.0.0-beta.2",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "babel-plugin-styled-components": "1.5.1",
     "eslint": "^5.0.1",
-    "eslint-plugin-react": "^7.10.0"
+    "eslint-plugin-react": "^7.10.0",
+    "prop-types": "15.6.2"
   }
 }
