--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gatsby": "2.0.0-beta.13",
-    "gatsby-link": "2.0.0-beta.3",
-    "gatsby-plugin-react-helmet": "3.0.0-beta.3",
-    "gatsby-plugin-sharp": "2.0.0-beta.2",
-    "gatsby-plugin-styled-components": "3.0.0-beta.2",
-    "gatsby-remark-copy-linked-files": "2.0.0-beta.2",
-    "gatsby-remark-images": "2.0.1-beta.3",
-    "gatsby-remark-prismjs": "3.0.0-beta.3",
-    "gatsby-remark-responsive-iframe": "2.0.0-beta.2",
-    "gatsby-remark-smartypants": "2.0.0-beta.2",
-    "gatsby-source-filesystem": "2.0.1-beta.3",
-    "gatsby-transformer-remark": "2.1.1-beta.2",
+    "gatsby": "2.0.0-rc.7",
+    "gatsby-link": "2.0.0-rc.2",
+    "gatsby-plugin-react-helmet": "3.0.0-rc.1",
+    "gatsby-plugin-sharp": "2.0.0-rc.3",
+    "gatsby-plugin-styled-components": "3.0.0-rc.1",
+    "gatsby-remark-copy-linked-files": "2.0.0-rc.1",
+    "gatsby-remark-images": "2.0.1-rc.1",
+    "gatsby-remark-prismjs": "3.0.0-rc.2",
+    "gatsby-remark-responsive-iframe": "2.0.0-rc.1",
+    "gatsby-remark-smartypants": "2.0.0-rc.1",
+    "gatsby-source-filesystem": "2.0.1-rc.1",
+    "gatsby-transformer-remark": "2.1.1-rc.1",
     "gh-pages": "1.2.0",
     "prismjs": "1.15.0",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
-    "react-helmet": "^5.2.0",
-    "styled-components": "^3.3.3"
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
+    "react-helmet": "5.2.0",
+    "styled-components": "3.4.5"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "1.5.1",
