--- a/package.json
+++ b/package.json
@@ -12,24 +12,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gatsby": "^1.9.246",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "gatsby-plugin-sharp": "^1.6.41",
-    "gatsby-plugin-styled-components": "^2.0.11",
-    "gatsby-remark-copy-linked-files": "^1.5.31",
-    "gatsby-remark-images": "^1.5.60",
-    "gatsby-remark-prismjs": "^1.2.23",
-    "gatsby-remark-responsive-iframe": "^1.4.18",
-    "gatsby-remark-smartypants": "^1.4.12",
-    "gatsby-source-filesystem": "^1.5.28",
-    "gatsby-transformer-remark": "^1.7.39",
+    "gatsby": "2.0.0-rc.7",
+    "gatsby-link": "2.0.0-rc.2",
+    "gatsby-plugin-react-helmet": "3.0.0-rc.1",
+    "gatsby-plugin-sharp": "2.0.0-rc.3",
+    "gatsby-plugin-styled-components": "3.0.0-rc.1",
+    "gatsby-remark-copy-linked-files": "2.0.0-rc.1",
+    "gatsby-remark-images": "2.0.1-rc.1",
+    "gatsby-remark-prismjs": "3.0.0-rc.2",
+    "gatsby-remark-responsive-iframe": "2.0.0-rc.1",
+    "gatsby-remark-smartypants": "2.0.0-rc.1",
+    "gatsby-source-filesystem": "2.0.1-rc.1",
+    "gatsby-transformer-remark": "2.1.1-rc.1",
     "gh-pages": "1.2.0",
-    "react-helmet": "^5.2.0",
-    "styled-components": "^3.2.5"
+    "prismjs": "1.15.0",
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
+    "react-helmet": "5.2.0",
+    "styled-components": "3.4.5"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0"
+    "babel-plugin-styled-components": "1.5.1",
+    "eslint": "^5.0.1",
+    "eslint-plugin-react": "^7.10.0",
+    "prop-types": "15.6.2"
   }
 }
