--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gatsby": "2.0.0-rc.7",
-    "gatsby-link": "2.0.0-rc.2",
-    "gatsby-plugin-react-helmet": "3.0.0-rc.1",
-    "gatsby-plugin-sharp": "2.0.0-rc.3",
-    "gatsby-plugin-styled-components": "3.0.0-rc.1",
-    "gatsby-remark-copy-linked-files": "2.0.0-rc.1",
-    "gatsby-remark-images": "2.0.1-rc.1",
-    "gatsby-remark-prismjs": "3.0.0-rc.2",
-    "gatsby-remark-responsive-iframe": "2.0.0-rc.1",
-    "gatsby-remark-smartypants": "2.0.0-rc.1",
-    "gatsby-source-filesystem": "2.0.1-rc.1",
-    "gatsby-transformer-remark": "2.1.1-rc.1",
-    "gh-pages": "1.2.0",
+    "gatsby": "2.0.50",
+    "gatsby-link": "2.0.6",
+    "gatsby-plugin-react-helmet": "3.0.2",
+    "gatsby-plugin-sharp": "2.0.12",
+    "gatsby-plugin-styled-components": "3.0.2",
+    "gatsby-remark-copy-linked-files": "2.0.6",
+    "gatsby-remark-images": "2.0.6",
+    "gatsby-remark-prismjs": "3.0.3",
+    "gatsby-remark-responsive-iframe": "2.0.6",
+    "gatsby-remark-smartypants": "2.0.6",
+    "gatsby-source-filesystem": "2.0.8",
+    "gatsby-transformer-remark": "2.1.12",
+    "gh-pages": "2.0.1",
     "prismjs": "1.15.0",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
     "react-helmet": "5.2.0",
-    "styled-components": "3.4.5"
+    "styled-components": "4.1.1"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "1.5.1",
-    "eslint": "^5.0.1",
-    "eslint-plugin-react": "^7.10.0",
+    "babel-plugin-styled-components": "1.8.0",
+    "eslint": "5.9.0",
+    "eslint-plugin-react": "7.11.1",
     "prop-types": "15.6.2"
   }
 }
