--- a/package.json
+++ b/package.json
@@ -12,29 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gatsby": "2.20.10",
-    "gatsby-link": "2.3.1",
-    "gatsby-plugin-react-helmet": "3.2.1",
-    "gatsby-plugin-sharp": "2.5.3",
-    "gatsby-plugin-styled-components": "3.2.1",
-    "gatsby-remark-copy-linked-files": "2.2.1",
-    "gatsby-remark-images": "3.2.1",
-    "gatsby-remark-prismjs": "3.4.1",
-    "gatsby-remark-responsive-iframe": "2.3.1",
-    "gatsby-remark-smartypants": "2.2.1",
-    "gatsby-source-filesystem": "2.2.2",
-    "gatsby-transformer-remark": "2.7.1",
-    "gh-pages": "2.2.0",
-    "prismjs": "1.19.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-helmet": "5.2.1",
-    "styled-components": "5.0.1"
+    "@11ty/eleventy": "0.11.1",
+    "gh-pages": "2.2.0"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "1.10.7",
-    "eslint": "6.8.0",
-    "eslint-plugin-react": "7.19.0",
-    "prop-types": "15.7.2"
+    "eslint": "6.8.0"
   }
 }
