Start migrating to Eleventy. Add home page

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,27 +1,21 @@
 {
-    "parserOptions": {
-        "ecmaVersion": 6,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true
-        }
-    },
-    "extends": "eslint:recommended",
-    "env": {
-        "browser": true,
-        "node": true,
-        "commonjs": true,
-        "es6": true
-    },
-    "rules": {
-        "semi": 1,
-        "eqeqeq": 1,
-        "no-unused-vars": ["error", { "vars": "all", "args": "after-used" }],
-        "no-console": 1,
-        "react/jsx-uses-react": "error",
-        "react/jsx-uses-vars": "error"
-    },
-    "plugins": [
-        "react"
-    ]
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module"
+  },
+  "extends": "eslint:recommended",
+  "env": {
+    "browser": true,
+    "node": true,
+    "commonjs": true,
+    "es6": true
+  },
+  "rules": {
+    "semi": 1,
+    "eqeqeq": 1,
+    "no-unused-vars": ["error", { "vars": "all", "args": "after-used" }],
+    "no-console": 1,
+    "react/jsx-uses-react": "error",
+    "react/jsx-uses-vars": "error"
+  }
 }
