--- a/.eslintrc
+++ b/.eslintrc
@@ -14,8 +14,6 @@
     "semi": 1,
     "eqeqeq": 1,
     "no-unused-vars": ["error", { "vars": "all", "args": "after-used" }],
-    "no-console": 1,
-    "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error"
+    "no-console": 1
   }
 }
