--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@11ty/eleventy-plugin-rss": "1.0.9",
     "@11ty/eleventy-plugin-syntaxhighlight": "3.0.4",
     "eslint": "6.8.0",
+    "js-yaml": "4.0.0",
     "markdown-it": "12.0.4"
   }
 }
