Migrate the publications page

--- a/src/_data/bibliography.yml
+++ b/src/_data/bibliography.yml
@@ -77,7 +77,7 @@ healthSciencesPapers:
   - title: Improved diagnosis of mycobacterial infections in formalin-fixed and paraffin-embedded sections with nested polymerase chain reaction
     authors: A. G. Azov, J. Koch, S. J. Hamilton-Dutoit
     published_by: Acta Pathologica, Microbiologica et Immunologica Scandinavica. 113:589–93, 2005
-    link: ./pdfs/diagnosis-of-mycobacterial-infections-with-nested-PCR.pdf
+    link: /pdfs/diagnosis-of-mycobacterial-infections-with-nested-PCR.pdf
 fictionTranslations:
   - title: "The Annotated Alice: The Definitive Edition"
     authors: Lewis Carroll and Martin Gardner
@@ -118,17 +118,17 @@ humanitiesPapers:
       - title: “Barbaric Yawp” in Russian
         authors: A. G. Azov
         published_by: Rocznik Komparatystyczny (Comparative Yearbook). 2013. No. 4. P. 321–325
-        link: ./pdfs/yawp-russian.pdf
+        link: /pdfs/yawp-russian.pdf
     russian:
       - title: О переиздании перевода «Посмертных записок Пиквикского клуба» под редакцией Густава Шпета
         authors: А. Г. Азов
         published_by: "Текстология и историко-литературный процесс: II Международная конференция молодых исследователей (Москва, Московский государственный университет им. М. В. Ломоносова, филологический факультет, 21—22 марта 2013 г.): Сборник статей. М.: Лидер, 2014. С. 158–176"
-        link: "http://tekstologia.jimdo.com/app/download/8704868093/Azov.pdf"
+        link: /pdfs/shpet-dickens.pdf
       - title: К истории теории перевода в Советском Союзе. Проблема реалистического перевода
         authors: А. Г. Азов
         published_by: Логос. 2012. № 3. С. 131–152
-        link: "http://www.logosjournal.ru/arch/22/art_163.pdf"
+        link: /pdfs/history-of-translation-in-ussr.pdf
       - title: "Воспаление: к истории слова и понятия"
         authors: А. Г. Азов
-        published_by: "Вопросы русского языкознания: Сб. Вып. XIII. Фонетика и грамматика: настоящее, прошедшее, будущее: К 50‑летию научной деятельности Софьи Константиновны Пожарицкой / Сост. С. В. Князев, А. В. Птенцова; отв. ред. М. Л. Ремнёва, С. В. Князев. М.: Изд-во МГУ, 2010. С. 323–329"
-        link: ./pdfs/inflammation.pdf
+        published_by: "Вопросы русского языкознания: Сб. Вып. XIII. Фонетика и грамматика: настоящее, прошедшее, будущее: К 50-летию научной деятельности Софьи Константиновны Пожарицкой / Сост. С. В. Князев, А. В. Птенцова; отв. ред. М. Л. Ремнёва, С. В. Князев. М.: Изд-во МГУ, 2010. С. 323–329"
+        link: /pdfs/inflammation.pdf
