--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-my-blog",
+  "name": "my-blog",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,12 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "0.11.1",
-    "gh-pages": "2.2.0"
+    "gh-pages": "3.1.0",
+    "luxon": "1.25.0"
   },
   "devDependencies": {
-    "@11ty/eleventy-plugin-rss": "1.0.9",
-    "@11ty/eleventy-plugin-syntaxhighlight": "3.0.4",
-    "eslint": "6.8.0",
+    "@11ty/eleventy-plugin-rss": "1.1.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "3.0.6",
+    "eslint": "7.19.0",
     "js-yaml": "4.0.0",
     "markdown-it": "12.0.4"
   }
