--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "eleventy",
     "start": "eleventy --incremental --serve",
-    "deploy": "npm run build && gh-pages -d public"
+    "start-incremental": "eleventy --incremental --serve",
+    "deploy": "npm run build && gh-pages -d public",
+    "debug": "DEBUG=Eleventy* eleventy --incremental --serve"
   },
   "author": "",
   "license": "ISC",
