--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "2.0.0-canary.25",
-    "gh-pages": "4.0.0",
-    "luxon": "3.2.1"
+    "@11ty/eleventy": "^2.0.0-canary.25",
+    "gh-pages": "5.0.0",
+    "luxon": "3.3.0"
   },
   "devDependencies": {
     "@11ty/eleventy-plugin-rss": "1.2.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "4.2.0",
-    "eslint": "8.31.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "5.0.0",
+    "eslint": "8.41.0",
     "js-yaml": "4.1.0",
     "markdown-it": "13.0.1"
   }
