--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^2.0.0-canary.25",
+    "@11ty/eleventy": "^2.0.1",
     "gh-pages": "5.0.0",
     "luxon": "3.3.0"
   },
