--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "eleventy",
-    "start": "eleventy --incremental --serve",
-    "ignore-initial": "eleventy --ignore-initial --incremental --serve",
+    "start": "eleventy --ignore-initial --incremental --serve",
     "start-incremental": "eleventy --incremental --serve",
     "deploy": "npm run build && gh-pages -d public",
     "debug": "DEBUG=Eleventy* eleventy --incremental --serve"
