--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
-    "@11ty/eleventy-plugin-bundle": "^1.0.4",
-    "gh-pages": "6.0.0",
-    "luxon": "3.4.2"
+    "@11ty/eleventy-plugin-bundle": "1.0.5",
+    "gh-pages": "6.1.1",
+    "luxon": "3.4.4"
   },
   "devDependencies": {
     "@11ty/eleventy-plugin-rss": "1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "5.0.0",
-    "eslint": "8.48.0",
+    "eslint": "8.56.0",
     "js-yaml": "4.1.0",
-    "markdown-it": "13.0.1"
+    "markdown-it": "14.0.0"
   }
 }
